crates/tests/fixtures/harness/data/error/attribute_on_class_interface/input.rdl

#[winrt]
mod Test {
    interface IFoo {}
    class MyClass {
        #[default] IFoo,
    }
}
        